alteração de espaço

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <h1> Workshop Git e Github 1 </h1>
-    <p> 
-        Mariana Fagueiro
-    </p>
+    <p>Mariana Fagueiro</p>
 </body>
 </html>
